# bitquid

./: Cargo.toml  LICENSE  README.md
config/: default.toml
crates/consensus/: Cargo.toml
crates/consensus/src/: engine.rs  error.rs  lib.rs  messages.rs  validator.rs
crates/core/: Cargo.toml
crates/core/src/: account.rs  block.rs  chain.rs  error.rs  genesis.rs  lib.rs  state.rs  transaction.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: address.rs  error.rs  hash.rs  keys.rs  lib.rs  merkle.rs
crates/mempool/: Cargo.toml
crates/mempool/src/: error.rs  lib.rs
crates/network/: Cargo.toml
crates/network/src/: codec.rs  error.rs  lib.rs  noise.rs  peer.rs  protocol.rs  rate_limiter.rs  server.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: auth.rs  error.rs  handlers.rs  lib.rs  types.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: defi.rs  engine.rs  error.rs  executor.rs  gas.rs  host.rs  lib.rs  opcodes.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  lib.rs
node/: Cargo.toml
node/src/: main.rs
