[workspace]
resolver = "2"
members = [
    "crates/crypto",
    "crates/core",
    "crates/storage",
    "crates/mempool",
    "crates/consensus",
    "crates/network",
    "crates/rpc",
    "crates/runtime",
    "node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bitquid-fi/bitquid-chain"
authors = ["Bitquid-Fi Team"]

[workspace.dependencies]
# Internal crates
bitquid-crypto = { path = "crates/crypto" }
bitquid-core = { path = "crates/core" }
bitquid-storage = { path = "crates/storage" }
bitquid-mempool = { path = "crates/mempool" }
bitquid-consensus = { path = "crates/consensus" }
bitquid-network = { path = "crates/network" }
bitquid-rpc = { path = "crates/rpc" }
bitquid-runtime = { path = "crates/runtime" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Cryptography — Post-Quantum (NIST FIPS 203/204)
ml-dsa = "=0.1.0-rc.8"
ml-kem = "0.2"
sha2 = "0.10"
blake3 = "1"
rand = "0.8"
hmac = "0.12"

# Storage
sled = "0.34"

# Networking
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Config
toml = "0.8"

# AEAD
chacha20poly1305 = "0.10"

# Utilities
hex = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
dashmap = "6"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
futures = "0.3"
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
