[package]
name = "bitquid-consensus"
description = "PBFT consensus engine for Bitquid-Fi sidechain"
version.workspace = true
edition.workspace = true

[dependencies]
bitquid-core = { workspace = true }
bitquid-crypto = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
