[package]
name = "bitquid-core"
description = "Core blockchain types for Bitquid-Fi sidechain"
version.workspace = true
edition.workspace = true

[dependencies]
bitquid-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
