[package]
name = "bitquid-crypto"
description = "Cryptographic primitives for Bitquid-Fi sidechain"
version.workspace = true
edition.workspace = true

[dependencies]
ml-dsa = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
