[package]
name = "bitquid-runtime"
description = "DeFi runtime / lightweight VM for Bitquid-Fi sidechain"
version.workspace = true
edition.workspace = true

[dependencies]
bitquid-core = { workspace = true }
bitquid-crypto = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
