[package]
name = "bitquid-storage"
description = "Persistent storage layer for Bitquid-Fi sidechain"
version.workspace = true
edition.workspace = true

[dependencies]
bitquid-core = { workspace = true }
bitquid-crypto = { workspace = true }
sled = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
hex = { workspace = true }
